# x86-boot

./: Cargo.toml  README.md  build.rs
.github/: dependabot.yml
.github/workflows/: rust.yml
examples/: bootrom.json  bootrom.ld  bootrom.rs  pvh.rs
examples/bootrom/: layout.ld  main.rs  x86_64-none.json
src/: gdt.rs  lib.rs  paging.rs
