[package]
name = "x86-boot"
version = "0.1.0"
authors = ["Joe Richey <joerichey@google.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = "fat"

[dependencies]
x86_64 = "0.12"

# [patch.crates-io]
# x86_64 = { path = "../x86_64" }

[dev-dependencies]
uart_16550 = "0.2.10"