[package]
name = "x86-boot"
version = "0.1.0"
authors = ["Joe Richey <joerichey@google.com>"]
edition = "2018"
autoexamples = false

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = "fat"

[features]
default = ["start32", "build_page_tables"]
start32 = []
start16 = ["start32"]
build_page_tables = ["start32"]
init_data = []
zero_bss = []

[dependencies]
x86_64 = { path = "../x86_64" }

[dev-dependencies]
uart_16550 = "0.2.10"

[[example]]
name = "bootrom"
path = "examples/bootrom.rs"
required-features = ["start16"]