[package]
name = "x86-boot"
version = "0.1.1"
authors = ["Joe Richey <joerichey@google.com>"]
edition = "2021"
autoexamples = false

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = "fat"

[features]
default = ["start32", "build_page_tables"]
start32 = []
start16 = ["start32"]
build_page_tables = ["start32"]
init_data = []
zero_bss = []

[dependencies]
x86_64 = "0.14"

[dev-dependencies]
uart_16550 = "0.3"

[[example]]
name = "bootrom"
path = "examples/bootrom.rs"
required-features = ["start16"]
